Fixed Scale issue with graph. Updated to react-chartjs-2. Switched to horizontal graph for visibility of each bar graph.

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,8 @@
     float: right;
     border: 3px solid #73AD21;
     padding: 10px;
+    height: fit-content;
+    width: fit-content;
 }
 
 
